# BDD_Merger

./: CMakeLists.txt  README.md
Klient/: main.c
Klient_files/: bdd_klient.c  bdd_klient.h  klient_interface.c  klient_interface.h
Load_files/: module_map.conf
Load_files/Root/: A and B or C and D.pla  A or B and C or D.pla
Load_files/Second_Level/: A and B.pla  A or B.pla
Server/: main.c
Server_files/: bdd_server.c  bdd_server.h  module_manager.c  module_manager.h  server_interface.c  server_interface.h  server_utils.c  server_utils.h
Shared/: array_list.c  array_list.h  bdd_message.c  bdd_message.h  comm_utils.c  comm_utils.h  module.c  module.h  pla_function.c  pla_function.h
